--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   
   <title>Frontend Mentor | Recipe page</title>
   <link rel="stylesheet" type="text/css" href="index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap"
+      rel="stylesheet" />
 
- 
-  
 </head>
 <body>
   <div class="attribution">
@@ -69,13 +70,8 @@
       <div class="table-line"></div>
       <div class="table-menu"><p>Fat</p> <p class="g-coior">22g</p></div>
      </div>
-  </body>
-  </html>
-  
-
 </div>
 
- </div>
-</div>
+ 
 </body>
 </html>
