--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   
   <title>Frontend Mentor | Recipe page</title>
   <link rel="stylesheet" type="text/css" href="index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap"
+      rel="stylesheet" />
 
- 
-  
 </head>
 <body>
   <div class="attribution">
    <img class="Food-Image" src="./assets/images/image-omelette.jpeg">
   
   <div class="text-menu">
-   <h2>Simple Omelette Recipe</h2>
+   <h1>Simple Omelette Recipe</h1>
    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
     to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
    
@@ -31,7 +32,7 @@
     </ul>
   </div>
 
-  <h3>Ingredients</h3>
+  <h2>Ingredients</h2>
   <ul class="custom-list">
     <li>2-3 large eggs </li>
     <li>Salt, to taste </li>
@@ -41,7 +42,7 @@
   </ul>
 <div class="line"></div>
 
-<h3>Instructions</h3>
+<h2>Instructions</h2>
 <ol>
  <li><b>Beat the eggs: </b>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
   You can add a tablespoon of water or milk for a fluffier texture.</li>
@@ -58,7 +59,7 @@
 <div class="line"></div>
 
 
-<h3>Nutrition</h3>
+<h2>Nutrition</h2>
 <p>The table below shows nutritional values per serving without the additional fillings.</p>
      <div>
       <div class="table-menu"><p>Calories</p> <p class="g-coior">277kcal</p></div>
@@ -69,13 +70,8 @@
       <div class="table-line"></div>
       <div class="table-menu"><p>Fat</p> <p class="g-coior">22g</p></div>
      </div>
-  </body>
-  </html>
-  
-
 </div>
 
- </div>
-</div>
+ 
 </body>
 </html>
